--- a/BootStrap_Assessment/index.html
+++ b/BootStrap_Assessment/index.html
@@ -5,16 +5,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>prework_module1_lesson1_assessment</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <div id="FDM">
-    <h4 align ="left">FDM</h4>
-  </div>
+  <title>Bootstrap Assessment</title>
+  
+  
+    <!--  link our html to the Bootstrap CDN -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+   <link rel="stylesheet" href="style.css"> 
+
+   
 </head>
 
 <body>
-  <div class="fancyIdeas">
+  
+<!-- <div class="row">
+    <div class="col-md-1">
+      <p class="font-weight-bold">
+      <p class="text-left"><h4>FDM</h4></p>
+      </p>
+    </div>
+  </div> -->
+  <div class="FDM">
+  <nav class="navbar navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1">FDM</span>
+  </nav> 
+  </div>
+
+  <div class="row">
+    <div class="col-lg-4, text-center">
+      <div id="fancyideas"
+      <p class="font-monospace">BRING FANCY IDEAS TO LIFE</p> 
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="text-center">
+      <div class="jumbotron">
+        <p class="fs-2" ><strong>digital heaven</strong></p>
+        <p class="font-monospace">
+        <p class="lead"><a class="btn btn-primary btn-sm" href="#" role="box">get a free quote</a></p>
+        </p>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+
+  
+
+  <!-- 
+    <div class="fancyIdeas"> 
     <p>bring fancy ideads to life</p>
   </div>
 
@@ -29,6 +74,8 @@
   <div class="freeQuote">
     <p>get a free free quote</p>
   </div>
+-->
+  
 
 </body>
 
